# Cpp_Projekt

./: CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
config/: Languages.csv
configured/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt
src/bar/: CMakeLists.txt  bar.cpp  bar.h
src/calculator/: CMakeLists.txt  calculator.cpp  calculator.h
src/exceptions/: CMakeLists.txt
src/exceptions/file_not_found/: CMakeLists.txt  FileNotFoundException.cpp  FileNotFoundException.h
src/foo/: CMakeLists.txt  foo.cpp  foo.h
src/language_manager/: CMakeLists.txt  LanguageManager.cpp  LanguageManager.h
src/printer/: CMakeLists.txt  printer.cpp  printer.h
src/settings/: CMakeLists.txt  settings.cpp  settings.h
tests/: CMakeLists.txt  main.cpp
